--- a/index.html
+++ b/index.html
@@ -36,11 +36,17 @@
             <ul class="list contacts">
                 <li class="mail">
                     <a class="link contact-link" href="mailto:info@devstudio.com"> 
+                        <svg class="contact-link-icon" width="16" height="12">
+                            <use href="./images/icons.svg#icon-mail"></use>
+                        </svg>
                         info@devstudio.com
                     </a>
                 </li>
                 <li class="tel">
                     <a class="link contact-link" href="tel:+380961111111">
+                        <svg class="contact-link-icon" width="10" height="16">
+                            <use href="./images/icons.svg#icon-smartphone"></use>
+                        </svg>
                         +38 096 111 11 11
                     </a>
                 </li>
@@ -60,18 +66,38 @@
             <div class="container">
                 <ul class="list list-description">
                     <li class="description-mission">
+                        <div class="rectangle">
+                            <svg class="mission-icon" width="65" height="70">
+                                <use href="./images/icons.svg#icon-antenna"></use>
+                            </svg>
+                        </div>
                         <h3 class="title-description">Внимание к деталям</h3>
                         <p class="description">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                     </li>
                     <li class="description-mission">
+                        <div class="rectangle">
+                            <svg class="mission-icon" width="65" height="70">
+                                <use href="./images/icons.svg#icon-clock"></use>
+                            </svg>
+                        </div>
                         <h3 class="title-description">Пунктуальность</h3>
                         <p class="description">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                     </li>
                     <li class="description-mission">
+                        <div class="rectangle">
+                            <svg class="mission-icon" width="65" height="70">
+                                <use href="./images/icons.svg#icon-diagram"></use>
+                            </svg>
+                        </div>
                         <h3 class="title-description">Планирование</h3>
                         <p class="description">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                     </li>
                     <li class="description-mission">
+                        <div class="rectangle">
+                            <svg class="mission-icon" width="65" height="70">
+                                <use href="./images/icons.svg#icon-astronaut"></use>
+                            </svg>
+                        </div>
                         <h3 class="title-description">Современные технологии</h3>
                         <p class="description">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                     </li>
@@ -105,6 +131,36 @@
                         <div class="name-wrapper">
                             <h3 class="employees-name">Игорь Демьяненко</h3>
                             <p class="employees-position" lang="en">Product Designer</p>
+                            <ul class="soc-list list">
+                                <li class="soc-list-item">
+                                    <a href="" class="soc-list-link">
+                                        <svg class="soc-link-icon" width="20" height="20">
+                                            <use href="./images/icons.svg#icon-instagram"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="soc-list-item">
+                                    <a href="" class="soc-list-link">
+                                        <svg class="soc-link-icon" width="20" height="20">
+                                            <use href="./images/icons.svg#icon-twitter"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="soc-list-item">
+                                    <a href="" class="soc-list-link">
+                                        <svg class="soc-link-icon" width="20" height="20">
+                                            <use href="./images/icons.svg#icon-facebook"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="soc-list-item">
+                                    <a href="" class="soc-list-link">
+                                        <svg class="soc-link-icon" width="20" height="20">
+                                            <use href="./images/icons.svg#icon-linkedin"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
                     </li>
                     <li class="employees-card">
@@ -112,6 +168,36 @@
                         <div class="name-wrapper">
                             <h3 class="employees-name">Ольга Репина</h3>
                             <p class="employees-position" lang="en">Frontend Developer</p>
+                            <ul class="soc-list list">
+                                <li class="soc-list-item">
+                                    <a href="" class="soc-list-link">
+                                        <svg class="soc-link-icon" width="20" height="20">
+                                            <use href="./images/icons.svg#icon-instagram"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="soc-list-item">
+                                    <a href="" class="soc-list-link">
+                                        <svg class="soc-link-icon" width="20" height="20">
+                                            <use href="./images/icons.svg#icon-twitter"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="soc-list-item">
+                                    <a href="" class="soc-list-link">
+                                        <svg class="soc-link-icon" width="20" height="20">
+                                            <use href="./images/icons.svg#icon-facebook"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="soc-list-item">
+                                    <a href="" class="soc-list-link">
+                                        <svg class="soc-link-icon" width="20" height="20">
+                                            <use href="./images/icons.svg#icon-linkedin"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
                     </li>
                     <li class="employees-card">
@@ -119,6 +205,36 @@
                         <div class="name-wrapper">
                             <h3 class="employees-name">Николай Тарасов</h3>
                             <p class="employees-position" lang="en">Marketing</p>
+                            <ul class="soc-list list">
+                                <li class="soc-list-item">
+                                    <a href="" class="soc-list-link">
+                                        <svg class="soc-link-icon" width="20" height="20">
+                                            <use href="./images/icons.svg#icon-instagram"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="soc-list-item">
+                                    <a href="" class="soc-list-link">
+                                        <svg class="soc-link-icon" width="20" height="20">
+                                            <use href="./images/icons.svg#icon-twitter"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="soc-list-item">
+                                    <a href="" class="soc-list-link">
+                                        <svg class="soc-link-icon" width="20" height="20">
+                                            <use href="./images/icons.svg#icon-facebook"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="soc-list-item">
+                                    <a href="" class="soc-list-link">
+                                        <svg class="soc-link-icon" width="20" height="20">
+                                            <use href="./images/icons.svg#icon-linkedin"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
                     </li>
                     <li class="employees-card">
@@ -126,6 +242,36 @@
                         <div class="name-wrapper">
                             <h3 class="employees-name">Михаил Ермаков</h3>
                             <p class="employees-position" lang="en">UI Designer</p>
+                            <ul class="soc-list list">
+                                <li class="soc-list-item">
+                                    <a href="" class="soc-list-link">
+                                        <svg class="soc-link-icon" width="20" height="20">
+                                            <use href="./images/icons.svg#icon-instagram"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="soc-list-item">
+                                    <a href="" class="soc-list-link">
+                                        <svg class="soc-link-icon" width="20" height="20">
+                                            <use href="./images/icons.svg#icon-twitter"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="soc-list-item">
+                                    <a href="" class="soc-list-link">
+                                        <svg class="soc-link-icon" width="20" height="20">
+                                            <use href="./images/icons.svg#icon-facebook"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="soc-list-item">
+                                    <a href="" class="soc-list-link">
+                                        <svg class="soc-link-icon" width="20" height="20">
+                                            <use href="./images/icons.svg#icon-linkedin"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
                     </li>
                 </ul>
