--- a/portfolio.html
+++ b/portfolio.html
@@ -32,11 +32,25 @@
                         <a class="menu-link link" href="">Контакты</a>
                     </li>
                 </ul>
-                </nav>
-                <ul class="list contacts">
-                    <li class="mail"><a class="link contact-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                    <li class="tel"><a class="link contact-link" href="tel:+380961111111">+38 096 111 11 11</a></li>
-                </ul>
+            </nav>
+            <ul class="list contacts">
+                <li class="mail">
+                    <a class="link contact-link" href="mailto:info@devstudio.com">
+                        <svg class="contact-link-icon" width="16" height="12">
+                            <use href="./images/icons.svg#icon-mail"></use>
+                        </svg>
+                        info@devstudio.com
+                    </a>
+                </li>
+                <li class="tel">
+                    <a class="link contact-link" href="tel:+380961111111">
+                        <svg class="contact-link-icon" width="10" height="16">
+                            <use href="./images/icons.svg#icon-smartphone"></use>
+                        </svg>
+                        +38 096 111 11 11
+                    </a>
+                </li>
+            </ul>
         </div>
     </header>
     <main>
@@ -146,22 +160,58 @@
         </section>
     </main>
     <footer class="footer">
-        <div class="container">
-            <a class="logo-link link" href="./index.html" lang="en">Web<span class="accent accent-dark">Studio</span></a>
-            <address class="address">
-                <ul class="list contact-list">
-                    <li class="contact-item">
-                        <a class="address-link link" href="https://goo.gl/maps/2Wj12QhzYocX28hv6" target="_blank"
-                            rel="noopener noreferrer">г. Киев, пр-т Леси Украинки, 26</a>
+        <div class="container footer-wrapper">
+            <div class="footer-left">
+                <a class="logo-link link" href="./index.html" lang="en">Web<span
+                        class="accent accent-dark">Studio</span></a>
+                <address class="address">
+                    <ul class="list contact-list">
+                        <li class="contact-item">
+                            <a class="address-link link" href="https://goo.gl/maps/2Wj12QhzYocX28hv6" target="_blank"
+                                rel="noopener noreferrer">г. Киев, пр-т Леси Украинки, 26</a>
+                        </li>
+                        <li class="contact-item">
+                            <a class="main-contact-link link" href="mailto:info@example.com">info@example.com</a>
+                        </li>
+                        <li class="contact-item">
+                            <a class="main-contact-link link" href="tel:+380991111111">+38 099 111 11 11</a>
+                        </li>
+                    </ul>
+                </address>
+            </div>
+            <div class="join-us">
+                <h3 class="join-title">присоединяйтесь</h3>
+                <ul class="soc-list list">
+                    <li class="soc-list-item">
+                        <a href="" class="soc-list-link soc-list-link-dark">
+                            <svg class="soc-link-icon soc-link-icon-dark" width="20" height="20">
+                                <use href="./images/icons.svg#icon-instagram"></use>
+                            </svg>
+                        </a>
                     </li>
-                    <li class="contact-item">
-                        <a class="main-contact-link link" href="mailto:info@example.com">info@example.com</a>
+                    <li class="soc-list-item">
+                        <a href="" class="soc-list-link soc-list-link-dark">
+                            <svg class="soc-link-icon soc-link-icon-dark" width="20" height="20">
+                                <use href="./images/icons.svg#icon-twitter"></use>
+                            </svg>
+                        </a>
                     </li>
-                    <li class="contact-item">
-                        <a class="main-contact-link link" href="tel:+380991111111">+38 099 111 11 11</a>
+                    <li class="soc-list-item">
+                        <a href="" class="soc-list-link soc-list-link-dark">
+                            <svg class="soc-link-icon soc-link-icon-dark" width="20" height="20">
+                                <use href="./images/icons.svg#icon-facebook"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="soc-list-item">
+                        <a href="" class="soc-list-link soc-list-link-dark">
+                            <svg class="soc-link-icon soc-link-icon-dark" width="20" height="20">
+                                <use href="./images/icons.svg#icon-linkedin"></use>
+                            </svg>
+                        </a>
                     </li>
                 </ul>
-            </address>
+            </div>
         </div>
     </footer>
 </body>
