--- a/index.html
+++ b/index.html
@@ -277,23 +277,108 @@
                 </ul>
             </div>
         </section>
-    </main>
-    <footer class="footer">
-        <div class="container">
-            <a class="logo-link link" href="./index.html" lang="en">Web<span class="accent accent-dark">Studio</span></a>
-            <address class="address">
-                <ul class="list contact-list">
-                    <li class="contact-item">
-                        <a class="address-link link" href="https://goo.gl/maps/2Wj12QhzYocX28hv6" target="_blank" rel="noopener noreferrer">г. Киев, пр-т Леси Украинки, 26</a>
+        <!-- Our clients -->
+        <section class="our-clients">
+            <div class="container">
+                <h2 class="section-title">Постоянные клиенты</h2>
+                <ul class="clients-list list">
+                    <li class="clients-list-item">
+                        <a href="" class="clients-link">
+                            <svg class="clients-link-icon" width="106" height="60">
+                                <use href="./images/icons.svg#icon-group"></use>
+                            </svg>
+                        </a>
                     </li>
-                    <li class="contact-item">
-                        <a class="main-contact-link link" href="mailto:info@example.com">info@example.com</a>
+                    <li class="clients-list-item">
+                        <a href="" class="clients-link">
+                            <svg class="clients-link-icon" width="106" height="60">
+                                <use href="./images/icons.svg#icon-group-1"></use>
+                            </svg>
+                        </a>
                     </li>
-                    <li class="contact-item">
-                        <a class="main-contact-link link" href="tel:+380991111111">+38 099 111 11 11</a>
+                    <li class="clients-list-item">
+                        <a href="" class="clients-link">
+                            <svg class="clients-link-icon" width="106" height="60">
+                                <use href="./images/icons.svg#icon-group-2"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="clients-list-item">
+                        <a href="" class="clients-link">
+                            <svg class="clients-link-icon" width="106" height="60">
+                                <use href="./images/icons.svg#icon-group-3"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="clients-list-item">
+                        <a href="" class="clients-link">
+                            <svg class="clients-link-icon" width="106" height="60">
+                                <use href="./images/icons.svg#icon-group-4"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="clients-list-item">
+                        <a href="" class="clients-link link">
+                            <svg class="clients-link-icon" width="106" height="60">
+                                <use href="./images/icons.svg#icon-group-5"></use>
+                            </svg>
+                        </a>
                     </li>
                 </ul>
-            </address>
+            </div>
+        </section>
+    </main>
+    <footer class="footer">
+        <div class="container footer-wrapper">
+            <div class="footer-left">
+                    <a class="logo-link link" href="./index.html" lang="en">Web<span class="accent accent-dark">Studio</span></a>
+                    <address class="address">
+                        <ul class="list contact-list">
+                            <li class="contact-item">
+                                <a class="address-link link" href="https://goo.gl/maps/2Wj12QhzYocX28hv6" target="_blank" rel="noopener noreferrer">г. Киев, пр-т Леси Украинки, 26</a>
+                            </li>
+                            <li class="contact-item">
+                                <a class="main-contact-link link" href="mailto:info@example.com">info@example.com</a>
+                            </li>
+                            <li class="contact-item">
+                                <a class="main-contact-link link" href="tel:+380991111111">+38 099 111 11 11</a>
+                            </li>
+                        </ul>
+                    </address>
+            </div>
+            <div class="footer-right">
+                <h3 class="join-title">присоединяйтесь</h3>
+                <ul class="soc-list list">
+                    <li class="soc-list-item">
+                        <a href="" class="soc-list-link soc-list-link-dark">
+                            <svg class="soc-link-icon soc-link-icon-dark" width="20" height="20">
+                                <use href="./images/icons.svg#icon-instagram"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="soc-list-item">
+                        <a href="" class="soc-list-link soc-list-link-dark">
+                            <svg class="soc-link-icon soc-link-icon-dark" width="20" height="20">
+                                <use href="./images/icons.svg#icon-twitter"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="soc-list-item">
+                        <a href="" class="soc-list-link soc-list-link-dark">
+                            <svg class="soc-link-icon soc-link-icon-dark" width="20" height="20">
+                                <use href="./images/icons.svg#icon-facebook"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="soc-list-item">
+                        <a href="" class="soc-list-link soc-list-link-dark">
+                            <svg class="soc-link-icon soc-link-icon-dark" width="20" height="20">
+                                <use href="./images/icons.svg#icon-linkedin"></use>
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </footer>
 </body>
