--- a/portfolio.html
+++ b/portfolio.html
@@ -75,85 +75,104 @@
                 </ul>
                 <ul class="portfolio-cards">
                     <li class="cards-list list">
-                        <a class="card-link link" href="">
-                            <img src="./images/portfolio/1.jpg" alt="Технокряк" width="370" height="294">
-                            <div class="card-wrapper">
-                                <h3 class="projects-name">Технокряк</h3>
-                                <p class="project-field">Веб-сайт</p>
-                            </div>
-                        </a>
+                        <div class="card">
+                            <a class="card-link link" href="">
+                                <img class="card-img" src="./images/portfolio/1.jpg" alt="Технокряк" width="370" height="294">
+                                <div class="card-wrapper">
+                                    <h3 class="projects-name">Технокряк</h3>
+                                    <p class="project-field">Веб-сайт</p>
+                                </div>
+                            </a>                           
+                        </div>
+
                     </li>
                     <li class="cards-list list">
-                        <a class="card-link link" href="">
-                            <img src="./images/portfolio/2.jpg" alt="Постер New Orlean vs Golden Star" width="370" height="294">
-                            <div class="card-wrapper">
-                                <h3 class="projects-name">Постер New Orlean vs Golden Star</h3>
-                                <p class="project-field">Дизайн</p>
-                            </div>
-                        </a>
+                        <div class="card">
+                            <a class="card-link link" href="">
+                                <img class="card-img" src="./images/portfolio/2.jpg" alt="Постер New Orlean vs Golden Star" width="370" height="294">
+                                <div class="card-wrapper">
+                                    <h3 class="projects-name">Постер New Orlean vs Golden Star</h3>
+                                    <p class="project-field">Дизайн</p>
+                                </div>
+                            </a>
+                        </div>
                     </li>
                     <li class="cards-list list">
-                        <a class="card-link link" href="">
-                            <img src="./images/portfolio/3.jpg" alt="Ресторан Seafood" width="370" height="294">
-                            <div class="card-wrapper">
-                                <h3 class="projects-name">Ресторан Seafood</h3>
-                                <p class="project-field">Приложение</p>
-                            </div>
-                        </a>
+                        <div class="card">
+                            <a class="card-link link" href="">
+                                <img class="card-img" src="./images/portfolio/3.jpg" alt="Ресторан Seafood" width="370" height="294">
+                                <div class="card-wrapper">
+                                    <h3 class="projects-name">Ресторан Seafood</h3>
+                                    <p class="project-field">Приложение</p>
+                                </div>
+                            </a>
+                        </div>
                     </li>
                     <li class="cards-list list">
-                        <a class="card-link link" href="">
-                            <img src="./images/portfolio/4.jpg" alt="Проект Prime" width="370" height="294">
-                            <div class="card-wrapper">
-                                <h3 class="projects-name">Проект Prime</h3>
-                                <p class="project-field">Маркетинг</p>
-                            </div>
-                        </a>
+                        <div class="card">
+                            <a class="card-link link" href="">
+                                <img class="card-img" src="./images/portfolio/4.jpg" alt="Проект Prime" width="370" height="294">
+                                <div class="card-wrapper">
+                                    <h3 class="projects-name">Проект Prime</h3>
+                                    <p class="project-field">Маркетинг</p>
+                                </div>
+                            </a>
+                        </div>
                     </li>
                     <li class="cards-list list">
-                        <a class="card-link link" href="">
-                            <img src="./images/portfolio/5.jpg" alt="Проект Boxes" width="370" height="294">
-                            <div class="card-wrapper">
-                                <h3 class="projects-name">Проект Boxes</h3>
-                                <p class="project-field">Приложение</p>
-                            </div>
-                        </a>
+                        <div class="card">
+                            <a class="card-link link" href="">
+                                <img class="card-img" src="./images/portfolio/5.jpg" alt="Проект Boxes" width="370" height="294">
+                                <div class="card-wrapper">
+                                    <h3 class="projects-name">Проект Boxes</h3>
+                                    <p class="project-field">Приложение</p>
+                                </div>
+                            </a>
+                        </div>
                     </li>
                     <li class="cards-list list">
-                        <a class="card-link link" href="">
-                            <img src="./images/portfolio/6.jpg" alt="Inspiration has no Borders" width="370" height="294">
-                            <div class="card-wrapper">
-                                <h3 class="projects-name">Inspiration has no Borders</h3>
-                                <p class="project-field">Веб-сайт</p>
-                            </div>
-                        </a>
+                        <div class="card">
+                            <a class="card-link link" href="">
+                                <img class="card-img" src="./images/portfolio/6.jpg" alt="Inspiration has no Borders" width="370" height="294">
+                                <div class="card-wrapper">
+                                    <h3 class="projects-name">Inspiration has no Borders</h3>
+                                    <p class="project-field">Веб-сайт</p>
+                                </div>
+                            </a>                            
+                        </div>
                     </li>
                     <li class="cards-list list">
-                        <a class="card-link link" href="">
-                            <img src="./images/portfolio/7.jpg" alt="Издание Limited Edition" width="370" height="294">
-                            <div class="card-wrapper">
-                                <h3 class="projects-name">Издание Limited Edition</h3>
-                                <p class="project-field">Дизайн</p>
-                            </div>
-                        </a>
+                        <div class="card">
+                            <a class="card-link link" href="">
+                                <img class="card-img" src="./images/portfolio/7.jpg" alt="Издание Limited Edition" width="370" height="294">
+                                <div class="card-wrapper">
+                                    <h3 class="projects-name">Издание Limited Edition</h3>
+                                    <p class="project-field">Дизайн</p>
+                                </div>
+                            </a>
+                        </div>
                     </li>
                     <li class="cards-list list">
-                        <a class="card-link link" href="">
-                            <img src="./images/portfolio/8.jpg" alt="Проект LAB" width="370" height="294">
-                            <div class="card-wrapper">
-                                <h3 class="projects-name">Проект LAB</h3>
-                                <p class="project-field">Маркетинг</p>
-                            </div>
-                        </a>
+                        <div class="card">
+                            <a class="card-link link" href="">
+                                <img class="card-img" src="./images/portfolio/8.jpg" alt="Проект LAB" width="370" height="294">
+                                <div class="card-wrapper">
+                                    <h3 class="projects-name">Проект LAB</h3>
+                                    <p class="project-field">Маркетинг</p>
+                                </div>
+                            </a>                            
+                        </div>
                     </li>
                     <li class="cards-list list">
-                        <a class="card-link link" href="">
-                            <img src="./images/portfolio/9.jpg" alt="Growing Business" width="370" height="294">
-                            <div class="card-wrapper">
-                                <h3 class="projects-name">Growing Business</h3>
-                                <p class="project-field">Приложение</p>
-                            </div>
-                        </a>
+                        <div class="card">
+                            <a class="card-link link" href="">
+                                <img class="card-img" src="./images/portfolio/9.jpg" alt="Growing Business" width="370" height="294">
+                                <div class="card-wrapper">
+                                    <h3 class="projects-name">Growing Business</h3>
+                                    <p class="project-field">Приложение</p>
+                                </div>
+                            </a>
+                        </div>
                     </li>
                 </ul>
             </div>
@@ -179,7 +198,7 @@
                     </ul>
                 </address>
             </div>
-            <div class="join-us">
+            <div class="footer-right">
                 <h3 class="join-title">присоединяйтесь</h3>
                 <ul class="soc-list list">
                     <li class="soc-list-item">
